[package]
name = "firecracker"
version = "1.13.0-dev"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2024"
build = "build.rs"
description = "Firecracker enables you to deploy workloads in lightweight virtual machines, called microVMs, which provide enhanced security and workload isolation over traditional VMs, while enabling the speed and resource efficiency of containers."
homepage = "https://firecracker-microvm.github.io/"
license = "Apache-2.0"

[lib]
bench = false

[[bin]]
name = "firecracker"
bench = false

[features]
tracing = ["log-instrument", "utils/tracing", "vmm/tracing"]
gdb = ["vmm/gdb"]

[dependencies]
displaydoc = "0.2.5"
event-manager = "0.4.1"
libc = "0.2.174"
log-instrument = { path = "../log-instrument", optional = true }
micro_http = { git = "https://github.com/firecracker-microvm/micro-http" }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.141"
thiserror = "2.0.12"
timerfd = "1.6.0"
utils = { path = "../utils" }
vmm = { path = "../vmm" }
vmm-sys-util = { version = "0.14.0", features = ["with-serde"] }

[build-dependencies]
seccompiler = { path = "../seccompiler" }
serde = { version = "1.0.219" }
serde_json = "1.0.141"

[dev-dependencies]
cargo_toml = "0.22.3"
libc = "0.2.174"
regex = { version = "1.11.1", default-features = false, features = ["std", "unicode-perl"] }

# Dev-Dependencies for uffd examples
serde = { version = "1.0.219", features = ["derive"] }
userfaultfd = "0.8.1"

[lints]
workspace = true

[[example]]
name = "uffd_malicious_handler"
path = "examples/uffd/malicious_handler.rs"

[[example]]
name = "uffd_on_demand_handler"
path = "examples/uffd/on_demand_handler.rs"

[[example]]
name = "uffd_fault_all_handler"
path = "examples/uffd/fault_all_handler.rs"

[[example]]
name = "seccomp_harmless"
path = "examples/seccomp/harmless.rs"

[[example]]
name = "seccomp_jailer"
path = "examples/seccomp/jailer.rs"

[[example]]
name = "seccomp_malicious"
path = "examples/seccomp/malicious.rs"

[[example]]
name = "seccomp_panic"
path = "examples/seccomp/panic.rs"
