[package]
name = "guest_config"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
build = "../../build.rs"
edition = "2018"
description = "Program that compiles JSON formatted configuration files into binary format for optimal runtime configuration"
homepage = "https://firecracker-microvm.github.io/"
license = "Apache-2.0"

[[bin]]
name = "guestconfig-compiler-bin"
path = "src/guest_config_compiler_bin.rs"

[dependencies]
bincode = "1.3.3"
serde = { version = ">=1.0.27", features = ["derive"] }
serde_json = ">=1.0.9"
itertools = ">=0.10.3"
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
thiserror = "1.0.34"
phf = { version = ">=0.10", features = ["macros"] }
kvm-bindings = { version = ">=0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = ">=0.9.0"

cpuid = { path = "../cpuid" }
logger = { path = "../logger" }
arch = { path = "../arch" }
utils = { path = "../utils" }

[dev-dependencies]
tempfile = "3.3.0"

