[package]
name = "guest_config"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
itertools = "0.10.3"
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
thiserror = "1.0.34"
phf = { version = "0.11.1", features = ["macros"] }
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.12.0"

cpuid = { path = "../cpuid" }
logger = { path = "../logger" }
arch = { path = "../arch" }

[dev-dependencies]
tempfile = "3.3.0"
fail = "0.4.0"
