[package]
name = "guest_config"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.13.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.34"

arch = { path = "../arch" }
arch_gen = { path = "../arch_gen" }
bit-fields = { path = "../bit-fields" }
logger = { path = "../logger" }
utils = { path = "../utils" }