[package]
name = "io_uring"
version = "0.1.0"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
libc = ">=0.2.103"
utils = { path = "../utils" }
vm-memory = { version = "0.7.0", features = ["backend-mmap"] }

[dev-dependencies]
proptest = { version = ">=1.0.0", default-features = false, features = ["std"] }
